// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - colors - value[0] - SwatchesColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "colors": Array [
        Array [
          "#123456",
          "#abc345",
        ],
        Array [
          "#ff3456",
          "#aff345",
        ],
      ],
      "height": "135px",
      "id": "colors_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - SwatchesColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "colors": undefined,
      "height": "135px",
      "id": "default_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - defaultColor - value[0] - SwatchesColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#11FF00",
      "colors": undefined,
      "height": "135px",
      "id": "defaultColor_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - height - value[0] - SwatchesColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "colors": undefined,
      "height": 100,
      "id": "height_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - inputStyle - value[0] - SwatchesColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},{\\"border\\":\\"3px solid blue\\"}]}",
      "color": "#000000",
      "colors": undefined,
      "height": "135px",
      "id": "inputStyle_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - label-disabled - value[0] - SwatchesColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "colors": undefined,
      "height": "135px",
      "id": "label-disabled_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - title - value[0] - SwatchesColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "colors": undefined,
      "height": "135px",
      "id": "title_input",
      "onChangeComplete": [Function],
      "width": "100%",
    },
    Object {},
  ],
]
`;

exports[`Mock render - width - value[0] - SwatchesColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "colors": undefined,
      "height": "135px",
      "id": "width_input",
      "onChangeComplete": [Function],
      "width": 100,
    },
    Object {},
  ],
]
`;
